infra/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blazil
  labels:
    app.kubernetes.io/name: blazil
    app.kubernetes.io/version: "0.2"
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
